Allow templates to have a given title and description

--- a/website/index.html
+++ b/website/index.html
@@ -7,8 +7,8 @@
     <meta name="google-site-verification" content="YPX7BgsQ_bUIojSHIeNuvH_L2cdQeqChznuTkXMCZnk" />
     <meta name="msvalidate.01" content="E57E5660400EC8CFCDE3277000A6EFBA" /> <!--bing webmaster validation-->
 
-    <title>{{=it.portalConfig.website.siteTitle}}</title>
-    <meta name="description" content="Most profitable altcoin mining multipool paying mining rewards in Litecoin,Bitcoin,GULDEN,AUR,GRS,ADC,SALUS,XPY,SNRG. Algos supported Scrypt,X11,Sha256,Neoscrypt,Lyra2rev2,myr-groestl">
+    <title>{{title}}</title>
+    <meta name="description" content="{{description}}">
     <meta name="author" content="Hashgoal - Altcoin mining pool">
     <meta name="keywords" content="curecoin(CURE),digibyte(DGB),PrimeXI(PXI),artbyte(applebytecoin(ABY)),ivugeoevolutioncoin(IEC),altcoin mining,most profitable,litecoin payment,bitcoin payment,Scrypt,X11,Sha256,Neoscrypt,Lyra2rev2,cryptocurrency,profit switching,multi-algo">
 
